--- a/src/styles/pages/catalogPage.scss
+++ b/src/styles/pages/catalogPage.scss
@@ -1,9 +1,3 @@
-.page {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
 .catalog-page {
   padding: 64px 0;
 } 
@@ -12,4 +6,9 @@
   display: flex;
   justify-content: space-between;
   column-gap: 20px;
+
+  @media (max-width: ($mobileBreakPoint + px)) {
+    flex-direction: column;
+    row-gap: 15px;
+  }
 }
